--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
             <h1 class="text first">Abdullah Ramadan Elansary</h1>
                 <span class="text first">Pamulang University</span> <br>
                 <span class="text sec"></span>
+                <button class="btn-cv"><a href="https://docs.google.com/document/d/1GTqImEcGNmbZ7y4QriY1jC8zHAcX4_BE/edit?usp=drive_link&ouid=115981061328267386478&rtpof=true&sd=true" target="_blank">Download CV</a></button>
             <div class="social">
-                <a href="" target="_blank"> <i class="ri-youtube-fill"></i></a>
-                <a href="" target="_blank"> <i class="ri-instagram-fill"></i> </a>
-                <a href="" target="_blank"> <i class="ri-linkedin-fill"></i></a>
+                <a href="https://www.youtube.com/@ramdnelnn" target="_blank"> <i class="ri-youtube-fill"></i></a>
+                <a href="https://www.instagram.com/ramdneln?igsh=ajMzaW0yeWxvZ3Bx" target="_blank"> <i class="ri-instagram-fill"></i> </a>
+                <a href="https://www.linkedin.com/in/abdullah-ramadan-elansary-10393b289?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"> <i class="ri-linkedin-fill"></i></a>
                 <a href="https://github.com/Ramaaael" target="_blank"> <i class="ri-github-fill"></i></a>
             </div>
         </div>
