--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1 class="text first">Hai,I'm</h1>
             <h1 class="text first">Abdullah Ramadan Elansary</h1>
                 <span class="text first">Pamulang University</span> <br>
-                <span class="text sec"></span>
+                <span class="text sec"></span> <br>
                 <button class="btn-cv"><a href="https://docs.google.com/document/d/1GTqImEcGNmbZ7y4QriY1jC8zHAcX4_BE/edit?usp=drive_link&ouid=115981061328267386478&rtpof=true&sd=true" target="_blank">Download CV</a></button>
             <div class="social">
                 <a href="https://www.youtube.com/@ramdnelnn" target="_blank"> <i class="ri-youtube-fill"></i></a>
